LottoUserInput and tests